crates/vexor-compiler/tests/golden/error/output/if_missing_else.err
Error: parse error
   ╭─[ input:4:29 ]
   │
 4 │ val result = if r > 50 { c }
   │                             ┬  
   │                             ╰── expected `else`
───╯
